results/SpecGenBench/4-shot/log-MyPower-2023_11_05_04_19_54.txt
class MyPower {
    //@ requires n >= 0;
    //@ ensures \result == 1 ==> n == 0;
    //@ ensures \result == x^n;
    public static int power(int x, int n) {
        int res = 1;
        //@ maintaining res == x^i;
        //@ decreases n - i;
        for(int i = 0; i < n; i++)
	    res = res * x;
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MyPower.java:4: error: bad operand types for binary operator '^'
    //@ ensures \result == x^n;
                            ^
  first type:  boolean
  second type: int
/home/max/Documents/JMLGPT/tmp/MyPower.java:7: error: bad operand types for binary operator '^'
        //@ maintaining res == x^i;
                                ^
  first type:  boolean
  second type: int
2 errors

